--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,7 +68,7 @@
                         </div>
                         <div class="mb-3">
                           <label class="form-label">CEP</label>
-                          <input class="form-control" id="cep" placeholder="12345-678" required>
+                          <input class="form-control" id="cep" placeholder="12345678" required>
                         </div>
                         <div class="mb-3">
                           <label class="form-label">Rua/Av</label>
