--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,13 +19,13 @@
     <div class="d-grid gap-4 col-5 mx-auto">
 
         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalCadastraPessoa">
-            Cadastrar pessoa
+            Cadastrar person
         </button>
         <div class="modal fade" id="modalCadastraPessoa" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastrar pessoa</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastrar person</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -72,7 +72,7 @@
                         </div>
                         <div class="mb-3">
                           <label class="form-label">Rua/Av</label>
-                          <input class="form-control" id="endereco" required>
+                          <input class="form-control" id="address" required>
                         </div>
                         <div class="mb-3">
                           <label class="form-label">Numero</label>
@@ -168,7 +168,7 @@
                           <th scope="col">Tipo sanguineo</th>
                       </tr>
                       </thead>
-                      <tbody id="pessoas"></tbody>
+                      <tbody id="people"></tbody>
                   </table>
               </div>
               <div class="modal-footer">
