--- a/frontend/index.html
+++ b/frontend/index.html
@@ -168,7 +168,7 @@
                           <th scope="col">Tipo sanguineo</th>
                       </tr>
                       </thead>
-                      <tbody id="people"></tbody>
+                      <tbody id="pessoas"></tbody>
                   </table>
               </div>
               <div class="modal-footer">
